feat: add load and transaction phase